--- a/source/package.json
+++ b/source/package.json
@@ -9,8 +9,10 @@
     "antd": "^4.18.9",
     "axios": "^0.26.0",
     "env-cmd": "^10.1.0",
+    "lowdb": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "html-loader": "^3.1.0",
     "sass": "^1.49.9"
   }
 }
